[package]
name = "port-anchor-adaptor"
version = "0.2.8"
edition = "2018"
license = "Apache-2.0"

description = "Port Finance Anchor Adaptor"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
port-variable-rate-lending-instructions = "0.2.9"
port-staking-instructions = "0.2.0"
anchor-lang = "0.20.1"
solana-maths = "0.1.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
thiserror = "1.0.30"